# rust_bevy_space_invaders

./: Cargo.toml  chobs.json
src/: constants.rs  main.rs  movement.rs
src/entities/: alien.rs  bullet.rs  mod.rs  player.rs  shooter.rs
src/events/: clear_scene.rs  events_setup.rs  main_menu.rs  mod.rs  score.rs  sound.rs  start_game.rs
src/resources/: mod.rs  resources_setup.rs  state.rs
src/systems/: aliens.rs  bullet.rs  button.rs  init_setup.rs  mod.rs  player.rs  systems_setup.rs
src/ui/: button.rs  mod.rs  score.rs
